--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "express-session": "^1.17.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^8.3.0",
     "mongodb": "^3.5.9",
     "mongoose": "^5.9.20",
     "mongoose-currency": "^0.2.0",
     "morgan": "~1.9.1",
     "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^5.0.1",
+    "serve-favicon": "^2.5.0",
     "session-file-store": "^1.4.0"
   }
 }
